@@ -130,26 +130,32 @@ SettingsView::SettingsView(ConfigController* controller, InputController* inputC
 #endif
 
 	connect(m_ui.biosBrowse, SIGNAL(clicked()), this, SLOT(selectBios()));
-	connect(m_ui.buttonBox, SIGNAL(accepted()), this, SLOT(updateConfig()));
-	connect(m_ui.buttonBox, &QDialogButtonBox::clicked, [this](QAbstractButton* button) {
-		if (m_ui.buttonBox->buttonRole(button) == QDialogButtonBox::ApplyRole) {
-			updateConfig();
-		}
-	});
 
 	GBAKeyEditor* editor = new GBAKeyEditor(inputController, InputController::KEYBOARD, QString(), this);
 	m_ui.stackedWidget->addWidget(editor);
 	m_ui.tabs->addItem("Keyboard");
 	connect(m_ui.buttonBox, SIGNAL(accepted()), editor, SLOT(save()));
 
+	GBAKeyEditor* buttonEditor = nullptr;
 #ifdef BUILD_SDL
 	inputController->recalibrateAxes();
 	const char* profile = inputController->profileForType(SDL_BINDING_BUTTON);
-	editor = new GBAKeyEditor(inputController, SDL_BINDING_BUTTON, profile);
-	m_ui.stackedWidget->addWidget(editor);
+	buttonEditor = new GBAKeyEditor(inputController, SDL_BINDING_BUTTON, profile);
+	m_ui.stackedWidget->addWidget(buttonEditor);
 	m_ui.tabs->addItem("Controllers");
-	connect(m_ui.buttonBox, SIGNAL(accepted()), editor, SLOT(save()));
+	connect(m_ui.buttonBox, SIGNAL(accepted()), buttonEditor, SLOT(save()));
 #endif
+
+	connect(m_ui.buttonBox, SIGNAL(accepted()), this, SLOT(updateConfig()));
+	connect(m_ui.buttonBox, &QDialogButtonBox::clicked, [this, editor, buttonEditor](QAbstractButton* button) {
+		if (m_ui.buttonBox->buttonRole(button) == QDialogButtonBox::ApplyRole) {
+			updateConfig();
+			editor->save();
+			if (buttonEditor) {
+				buttonEditor->save();
+			}
+		}
+	});
 
 	ShortcutView* shortcutView = new ShortcutView();
 	shortcutView->setController(shortcutController);
