@@ -38,6 +38,7 @@ Bugfixes:
  - GB: Fix crash when masking savedata
  - GB Audio: Fix serialization of channel 3 and NR52 properties
  - GB: Properly initialize sramRealVf variable
+ - Qt: Fix Apply button for key and controller configurations
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
